--- a/index.html
+++ b/index.html
@@ -8,32 +8,45 @@
     <title>Scott Daniels</title>
 </head>
 <body>
+
     <header>
-        <h1>Scott Daniels</h1>
-        <nav>
-            <a href="index.html" alt="About">About</a>
-            <a href="contact.html" alt="Contact">Contact</a>
-            <a href="portfolio.html" alt="Portfolio">Portfolio</a>
-        </nav>    
+        <div class="navbar">
+            <div id="name-icon">
+                <h1>Scott Daniels</h1>
+            </div>
+            <div class="links">
+                <h3>
+                    <a href="index.html" alt="About" id="about-link">About</a>
+                    <a href="portfolio.html" alt="Portfolio" id="portfolio-link">Portfolio</a>
+                    <a href="contact.html" alt="Contact" id="contact-link">Contact</a>
+                </h3>  
+            </div>
+        </div>
     </header>
 
-
-
-    <div class="navbar">
-    </div>
-    <div class="about-me">
+    <main>
+        <div class="heading">
+            <h1 id="about-me">About Me</h1>
+        </div>
+        <img src="assets/images/me.jpg" alt="Photo of me." id="about-me-photo">
+    
         <p>
-            <img src="assets/images/me.jpg" alt="Photo of me." id="my-photo">
             Hello there, my name is Scott Daniels, and welcome to my portfolio!  I'd like to tell you a little bit about myself.    
         </p>
+
         <p>
-            With regard to my professional carrer, I currently work for a local utility company as a Firewall Administrator.  I have been there for a little over a year, and have spend a significant time scripting and automating certain operational tasks.  Before that I worked for the City of Charlotte, during my time there, I worked on the Network Operations team, and I went from being a Junior Network Engineer up to the title of Sr. Network Architect.  I'm currently pursuing Web Development in order to broaden my skillset and build out custom tools in the form of web applications.
+            With regard to my professional carrer, I currently work for a utility company as a Firewall Administrator.  I have been there for a little over a year, and have spend a significant time scripting and automating certain operational tasks.  Before that I worked for the local municipality, during my time there, I worked on the Network Operations team, and I went from being a Junior Network Engineer up to the title of Sr. Network Architect.  I'm currently pursuing Web Development in order to broaden my skillset and build out custom tools in the form of web applications.
         </p>
+
         <p>
             With regard to my personal life, I was recently married in November of 2018.  My wife and I have two cats, Hank and Penny.  They are both completely spoiled.  I'm also a massive Liverpool Fan. 
         </p>
-    </div>
 
+    </main>
+
+    <footer>
+        Copyright &copy;
+    </footer>
 </body>
 </html>
 
