added an additional image on about me page, tweaked some css positional parameters

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <p>
             With regard to my personal life, I was recently married in November of 2018.  My wife and I have two cats, Hank and Penny.  They are both completely spoiled.  I'm also a massive Liverpool Fan. 
         </p>
-
+        <img src="assets/images/cl.jpg" alt="Liverpool win Champions League 2018-19 season." id="cl-trophy-lift">
     </main>
 
     <footer>
