added some text to main section of the page

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,6 +26,7 @@
         <div class="heading">
             <h1 id="about-me">My Portfolio</h1>
         </div>
+        <p>More to come...</p>
         <img src="assets/images/construction.gif" alt="Under construction" class="under-construction">
     </main>
     <footer>
