removed unnecessary css ids from the links

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             </div>
             <div class="links">
                 <h3>
-                    <a href="index.html" alt="About" id="about-link">About</a>
-                    <a href="portfolio.html" alt="Portfolio" id="portfolio-link">Portfolio</a>
-                    <a href="contact.html" alt="Contact" id="contact-link">Contact</a>
+                    <a href="index.html" alt="About" >About</a>
+                    <a href="portfolio.html" alt="Portfolio" >Portfolio</a>
+                    <a href="contact.html" alt="Contact" >Contact</a>
                 </h3>  
             </div>
         </div>
