Formatted document, and removed some unused IDs

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Portfolio</title>
 </head>
+
 <body>
     <header>
         <div class="navbar">
@@ -15,12 +17,12 @@
             </div>
             <div class="links">
                 <h3>
-                    <a href="index.html" alt="About" id="about-link">About</a>
-                    <a href="portfolio.html" alt="Portfolio" id="portfolio-link">Portfolio</a>
-                    <a href="contact.html" alt="Contact" id="contact-link">Contact</a>
-                </h3>  
+                    <a href="index.html" alt="About">About</a>
+                    <a href="portfolio.html" alt="Portfolio">Portfolio</a>
+                    <a href="contact.html" alt="Contact">Contact</a>
+                </h3>
             </div>
-        </div>  
+        </div>
     </header>
     <main>
         <div class="heading">
@@ -33,4 +35,5 @@
         Copyright &copy;
     </footer>
 </body>
+
 </html>
