Fixed where form label didn't say Email Address

--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
                 <label for="name">Name</label>
                 <input type="text" name="fullname" placeholder="John Doe">
 
-                <label for="lname">Last Name</label>
+                <label for="lname">Email Address</label>
                 <input type="text" name="email" placeholder="john.doe@gmail.com">
 
 
